<resources>
    <string name="app_name">ProTeleprompter</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_colours_settings">Colour Settings</string>

    <string name="timer_startTime">00:00:00</string>
    <string name="timer_time">%02d:%02d:%02d</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>

    <string name="test_text__scrollView">Text messaging, or texting, is the act of composing and sending electronic messages,
        typically consisting of alphabetic and numeric characters, between two or more users of mobile phones, tablets, desktops/laptops, or other devices.
        Text messages may be sent over a cellular network, or may also be sent via an Internet connection.
        The term originally referred to messages sent using the Short Message Service (SMS).
        It has grown beyond alphanumeric text to include multimedia messages (known as MMS) containing digital images, videos,
        and sound content, as well as ideograms known as emoji (happy faces, sad faces, and other icons).
        As of 2017, text messages are used by youth and adults for personal, family and social purposes and in business.
        Governmental and non-governmental organizations use text messaging for communication between colleagues.
        As with emailing, in the 2010s, the sending of short informal messages has become an accepted part of many cultures.[1]
        This makes texting a quick and easy way to communicate with friends and colleagues,
        including in contexts where a call would be impolite or inappropriate
        (e.g., calling very late at night or when one knows the other person is busy with family or work activities).
        Like e-mail and voice mail, and unlike calls (in which the caller hopes to speak directly with the recipient),
        texting does not require the caller and recipient to both be free at the same moment; this permits communication even between busy individuals.
        Text messages can also be used to interact with automated systems, for example,
        to order products or services from e-commerce websites, or to participate in online contests.
        Advertisers and service providers use direct text marketing to send messages to mobile users about promotions, payment due dates,
        and other notifications instead of using postal mail, email, or voicemail.</string>

    <string name="pref_font_size_title">Font Size</string>
    <string name="pref_font_size_key">fontSize</string>
    <string name="pref_font_size_option_default">Normal</string>

    <string name="pref_font_size_option_small">Small</string>
    <string name="pref_font_size_option_normal">Normal</string>
    <string name="pref_font_size_option_large">Large</string>

    <string name="pref_font_size_value_small">Small</string>
    <string name="pref_font_size_value_normal">Normal</string>
    <string name="pref_font_size_value_large">Large</string>

    <string name="pref_mirrorMode_title">Mirror mode</string>
    <string name="pref_mirrorMode_key">mirrorMode</string>
    <string name="pref_mirrorMode_summary_off">Text will be displayed in the normal direction</string>
    <string name="pref_mirrorMode_summary_on">Text will be displayed in the opposite direction to normal</string>

    <string name="pref_display_colour_header">Display colour settings</string>
    <string name="pref_display_colour_key">DisplayedColourSettings</string>

    <string name="pref_display_font_colour_title">Font colour</string>
    <string name="pref_display_font_colour_key">fontColour</string>
    <string name="pref_display_font_colour_summary">Define scrolling text colour</string>

    <string name="pref_display_background_colour_title">Background colour</string>
    <string name="pref_display_background_colour_key">backgroundColour</string>
    <string name="pref_display_background_colour_summary">Define scrolling background colour</string>

    <string name="pref_scrolling_speed_key">scrollingSpeed</string>
    <string name="pref_scrolling_speed_title">Scrolling Speed</string>
    <string name="pref_scrolling_speed_default">Normal</string>

    <string name="pref_scrolling_speed_option_lazy">Lazy</string>
    <string name="pref_scrolling_speed_option_slow">Slow</string>
    <string name="pref_scrolling_speed_option_normal">Normal</string>
    <string name="pref_scrolling_speed_option_fast">Fast</string>
    <string name="pref_scrolling_speed_option_high_speed">High-speed</string>

    <string name="pref_scrolling_speed_value_lazy">Lazy</string>
    <string name="pref_scrolling_speed_value_slow">Slow</string>
    <string name="pref_scrolling_speed_value_normal">Normal</string>
    <string name="pref_scrolling_speed_value_fast">Fast</string>
    <string name="pref_scrolling_speed_value_high_speed">High-speed</string>

    <string name="pref_recent_files_Id">recentFilesId</string>

    <string name="delete_dialog_title">Delete confirm</string>
    <string name="delete_dialog_message">%s will be deleted from your teleprompter.</string>
    <string name="delete_dialog_positive_button">Delete</string>
    <string name="delete_dialog_negatibe_button">Cancel</string>

    <string name="type_dialog_reminder_button">GOT IT</string>
    <string name="type_dialog_reminder_title">Tips</string>
    <string name="type_dialog_reminder_message">Choose file with <b><i>.txt</i></b> extension.</string>

    <string name="edit_dialog_rename_title">Rename document</string>

    <string name="widget_recent_no_recent_title">Click to launch app</string>
    <string name="widget_recent_title">Recent opened document</string>
    <string name="widget_no_recent_file">No recent document</string>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="invitation_title">Share ProTeleprompter</string>
    <string name="invitation_message">I found a great teleprompter app and I would like to invite you to have a try!</string>
    <string name="invitation_cta">Download now!</string>

    <string name="content_description_file_icon">File type icon</string>
    <string name="content_description_rename_icon">Rename file</string>
    <string name="content_description_delete_icon">Delete file</string>
    <string name="content_description_app_icon">App icon</string>
    <string name="content_description_widget_play_icon">Launch scrolling page</string>
    <string name="content_description_widget_add_list_icon">Import new file</string>

    <string name="content_description_add_file_button">Add file float action button</string>

    <string name="no_file_text">No file</string>
    <string name="content_description_no_file">No file added icon</string>
    <string name="content_description_photo_alt_button">Open camera alt button</string>
    <string name="content_description_music_button">Start scrolling or pause button</string>

    <string name="library_title">Third-party Library License</string>
    <string name="thank_content">Several fantastic open-source libraries have really helped get ProTeleprompter to where it is today.
    A few require that I include their license agreements within this product. A big thanks to those smart people behind the fantastic programs listed.
    </string>


    <string name="Color_preference_list">Color Preference</string>
    <string name="Color_preference_license">Copyright 2016 Kizito Nwose

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.</string>
    <string name="EasyPermissions_list">EasyPermissions</string>
    <string name="EasyPermissions_license">Copyright 2017 Google

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

     http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.</string>

</resources>
