<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/pref_font_size_option_default"
        android:entries="@array/pref_font_size_options"
        android:entryValues="@array/pref_font_size_values"
        android:key="@string/pref_font_size_key"
        android:title="@string/pref_font_size_title" />

    <android.support.v7.preference.SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="@string/pref_mirrorMode_key"
        android:title="@string/pref_mirrorMode_title"
        android:summary="@string/pref_mirrorMode_summary_off"/>

    <Preference android:title="@string/pref_display_colour_header">
        <intent android:action="android.intent.action.SYNC_SETTING"/>
    </Preference>



</PreferenceScreen>