<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
        android:defaultValue="@color/font_default_colour"
        android:key="@string/pref_display_font_colour_key"
        android:summary="@string/pref_display_font_colour_summary"
        android:title="@string/pref_display_font_colour_title"
        android:icon="@drawable/ic_format_color_text_black_24px"
        app:showDialog="false" />

    <com.kizitonwose.colorpreferencecompat.ColorPreferenceCompat
        android:defaultValue="@color/background_default_colour"
        android:key="@string/pref_display_background_colour_key"
        android:summary="@string/pref_display_background_colour_summary"
        android:title="@string/pref_display_background_colour_title"
        android:icon="@drawable/ic_panorama_black_24px"
        app:showDialog="false"/>
</android.support.v7.preference.PreferenceScreen>